Afficher les sessions mobiles actives dans les profils
